--- a/src/jjm.one.RabbitMqClientWrapper/jjm.one.RabbitMqClientWrapper.csproj
+++ b/src/jjm.one.RabbitMqClientWrapper/jjm.one.RabbitMqClientWrapper.csproj
@@ -7,11 +7,11 @@
     <Version>1.0.0-alpha.1</Version>
     <Authors>Jonas Merkle [JJM] </Authors>
     <Copyright>© by Jonas Merkle [JJM], 2023.</Copyright>
-	  <RootNamespace>jjm.one.RabbitMqClientWrapper</RootNamespace>
+    <RootNamespace>jjm.one.RabbitMqClientWrapper</RootNamespace>
     <PackageId>jjm.one.RabbitMqClientWrapper</PackageId>
     <Title>jjm.one.RabbitMqClientWrapper</Title>
-    <Description>A C# wrapper for a RabbitMQ client.</Description>
-	  <PackageTags>utility, helper, wrapper, rabbitmq, client, csharp</PackageTags>
+    <Description>A csharp wrapper for a RabbitMQ client.</Description>
+    <PackageTags>utility, helper, wrapper, rabbitmq, client, csharp</PackageTags>
     <PackageProjectUrl>https://github.com/jjm-one/jjm.one.RabbitMqClientWrapper</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/jjm-one/jjm.one.RabbitMqClientWrapper.git</RepositoryUrl>
