--- a/src/jjm.one.RabbitMqClientWrapper/jjm.one.RabbitMqClientWrapper.csproj
+++ b/src/jjm.one.RabbitMqClientWrapper/jjm.one.RabbitMqClientWrapper.csproj
@@ -39,6 +39,9 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <None Remove="types\di\" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="..\..\LICENSE">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
@@ -47,5 +50,8 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="types\di\" />
   </ItemGroup>
 </Project>
