--- a/src/jjm.one.RabbitMqClientWrapper.Tests/jjm.one.RabbitMqClientWrapper.Tests.csproj
+++ b/src/jjm.one.RabbitMqClientWrapper.Tests/jjm.one.RabbitMqClientWrapper.Tests.csproj
@@ -40,6 +40,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.TestPlatform.TestHost" Version="17.6.2" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
   </ItemGroup>
 
   <ItemGroup>
