--- a/src/jjm.one.RabbitMqClientWrapper.Tests/jjm.one.RabbitMqClientWrapper.Tests.csproj
+++ b/src/jjm.one.RabbitMqClientWrapper.Tests/jjm.one.RabbitMqClientWrapper.Tests.csproj
@@ -49,4 +49,8 @@
   <ItemGroup>
     <ProjectReference Include="..\jjm.one.RabbitMqClientWrapper\jjm.one.RabbitMqClientWrapper.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="util\" />
+  </ItemGroup>
 </Project>
