disabled xml doc

--- a/src/jjm.one.RabbitMqClientWrapper/jjm.one.RabbitMqClientWrapper.csproj
+++ b/src/jjm.one.RabbitMqClientWrapper/jjm.one.RabbitMqClientWrapper.csproj
@@ -31,11 +31,11 @@
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <LangVersion>latestmajor</LangVersion>
-    <DocumentationFile>./jjm.one.MiscUtilFunctions.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <LangVersion>latestmajor</LangVersion>
-    <DocumentationFile>./jjm.one.MiscUtilFunctions.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
   
   <ItemGroup>
