--- a/src/jjm.one.RabbitMqClientWrapper.Utils/jjm.one.RabbitMqClientWrapper.Utils.csproj
+++ b/src/jjm.one.RabbitMqClientWrapper.Utils/jjm.one.RabbitMqClientWrapper.Utils.csproj
@@ -25,11 +25,11 @@
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <LangVersion>latestmajor</LangVersion>
-        <DocumentationFile>./jjm.one.MiscUtilFunctions.Utils.xml</DocumentationFile>
+        <DocumentationFile></DocumentationFile>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
         <LangVersion>latestmajor</LangVersion>
-        <DocumentationFile>./jjm.one.MiscUtilFunctions.Utils.xml</DocumentationFile>
+        <DocumentationFile></DocumentationFile>
     </PropertyGroup>
     
     <ItemGroup>
