--- a/src/jjm.one.RabbitMqClientWrapper.Utils/jjm.one.RabbitMqClientWrapper.Utils.csproj
+++ b/src/jjm.one.RabbitMqClientWrapper.Utils/jjm.one.RabbitMqClientWrapper.Utils.csproj
@@ -4,7 +4,7 @@
         <TargetFrameworks>net6.0;net8.0;netstandard2.0;netstandard2.1</TargetFrameworks>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>1.0.0-alpha.8</Version>
+        <Version>2.0.0-alpha.0</Version>
         <Authors>Jonas Merkle [JJM]</Authors>
         <Copyright>© by Jonas Merkle [JJM], 2024.</Copyright>
         <RootNamespace>jjm.one.RabbitMqClientWrapper.Utils</RootNamespace>
@@ -16,7 +16,7 @@
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/jjm-one/jjm.one.RabbitMqClientWrapper.git</RepositoryUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
-        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageLicenseFile>COPYING.LESSER.txt</PackageLicenseFile>
         <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <SignAssembly>True</SignAssembly>
@@ -31,7 +31,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="..\..\LICENSE">
+        <None Include="..\..\COPYING.txt">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+        <None Include="..\..\COPYING.LESSER.txt">
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
         </None>
