adds logo & merges license files

--- a/src/jjm.one.RabbitMqClientWrapper.Utils/jjm.one.RabbitMqClientWrapper.Utils.csproj
+++ b/src/jjm.one.RabbitMqClientWrapper.Utils/jjm.one.RabbitMqClientWrapper.Utils.csproj
@@ -16,11 +16,12 @@
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/jjm-one/jjm.one.RabbitMqClientWrapper.git</RepositoryUrl>
         <PackageReadmeFile>README.md</PackageReadmeFile>
-        <PackageLicenseFile>COPYING.LESSER.txt</PackageLicenseFile>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <SignAssembly>True</SignAssembly>
         <AssemblyOriginatorKeyFile>jjm.one.RabbitMqClientWrapper.Utils.SignKey.snk</AssemblyOriginatorKeyFile>
+        <PackageIcon>jjm.one-logo_1024x1024.png</PackageIcon>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -31,15 +32,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="..\..\COPYING.txt">
-            <Pack>True</Pack>
-            <PackagePath>\</PackagePath>
-        </None>
-        <None Include="..\..\COPYING.LESSER.txt">
+        <None Include="..\..\LICENSE">
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
         </None>
         <None Include="..\..\README.md">
+            <Pack>True</Pack>
+            <PackagePath>\</PackagePath>
+        </None>
+        <None Include="..\..\resources\logo\jjm.one-logo_1024x1024.png">
             <Pack>True</Pack>
             <PackagePath>\</PackagePath>
         </None>
